# SelfImprovement-Lab

./: .gitignore  Build-Desktop.bat  Build-Installer.bat  Build-Release.bat  README.md  Start-System.bat  Start-System.vbs  Start-Web.bat  Start-Web.vbs  package-lock.json  package.json  tsconfig.base.json
app/: SystemApp.ps1  WebServer.ps1
apps/desktop/: package.json
apps/desktop/src/: desktop-env.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: system-shell.tsx
apps/web/lib/: local-db.ts
src/: SelfImprovementLabs.cs
web/: app.js  index.html  styles.css
