[package]
name = "self-improvement-labs"
version = "0.1.0"
description = "An offline-first personal RPG system for real-life progression."
authors = ["Self Improvement Labs"]
edition = "2021"

[lib]
name = "self_improvement_labs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
time = "=0.3.44"
